--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <script <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
   <script src="js/app/app.js"></script>
+  <script src="js/app/controllers/StudentController.js"></script>
 </body>
 </html>
