--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
     <script src="js/app/app.js"></script>
     <script src="js/app/controllers/StudentController.js"></script>
+    <script src="js/app/services/StudentService.js"></script>
   </div>
 </body>
 </html>
